--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-popover": "^1.1.4",
+    "@radix-ui/react-scroll-area": "^1.2.2",
     "@radix-ui/react-select": "^2.1.4",
+    "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
     "@t3-oss/env-nextjs": "^0.10.1",
@@ -43,14 +46,16 @@
     "geist": "^1.3.0",
     "libphonenumber-js": "^1.11.17",
     "lucide-react": "^0.469.0",
-    "next": "^15.0.1",
+    "next": "^15.1.4",
     "next-auth": "5.0.0-beta.25",
     "next-themes": "^0.4.4",
     "postgres": "^3.4.4",
-    "react": "^18.3.1",
+    "react": "^19.0.0-rc.1",
     "react-country-flag": "^3.1.0",
-    "react-dom": "^18.3.1",
+    "react-dom": "^19.0.0-rc.1",
     "react-hook-form": "^7.54.2",
+    "react-icons": "^5.4.0",
+    "react-phone-number-input": "^3.4.10",
     "server-only": "^0.0.1",
     "sonner": "^1.7.1",
     "superjson": "^2.2.1",
@@ -69,7 +74,7 @@
     "@typescript-eslint/parser": "^8.1.0",
     "drizzle-kit": "^0.24.0",
     "eslint": "^8.57.0",
-    "eslint-config-next": "^15.0.1",
+    "eslint-config-next": "^15.1.4",
     "eslint-plugin-drizzle": "^0.2.3",
     "postcss": "^8.4.39",
     "prettier": "^3.3.2",
