--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@auth/drizzle-adapter": "^1.7.2",
     "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-avatar": "^1.1.2",
+    "@radix-ui/react-collapsible": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-label": "^2.1.1",
@@ -46,13 +47,13 @@
     "geist": "^1.3.0",
     "libphonenumber-js": "^1.11.17",
     "lucide-react": "^0.469.0",
-    "next": "^15.1.4",
+    "next": "^15.0.1",
     "next-auth": "5.0.0-beta.25",
     "next-themes": "^0.4.4",
     "postgres": "^3.4.4",
-    "react": "^19.0.0-rc.1",
+    "react": "^18.3.1",
     "react-country-flag": "^3.1.0",
-    "react-dom": "^19.0.0-rc.1",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
     "react-phone-number-input": "^3.4.10",
@@ -74,7 +75,7 @@
     "@typescript-eslint/parser": "^8.1.0",
     "drizzle-kit": "^0.24.0",
     "eslint": "^8.57.0",
-    "eslint-config-next": "^15.1.4",
+    "eslint-config-next": "^15.0.1",
     "eslint-plugin-drizzle": "^0.2.3",
     "postcss": "^8.4.39",
     "prettier": "^3.3.2",
