--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "geist": "^1.3.0",
     "libphonenumber-js": "^1.11.17",
     "lucide-react": "^0.469.0",
+    "motion": "^11.17.0",
     "next": "^15.0.1",
     "next-auth": "5.0.0-beta.25",
     "next-themes": "^0.4.4",
