--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^4.1.0",
+    "dotted-map": "^2.2.3",
     "drizzle-orm": "^0.33.0",
     "geist": "^1.3.0",
     "libphonenumber-js": "^1.11.17",
