--- a/package.json
+++ b/package.json
@@ -47,11 +47,14 @@
     "drizzle-orm": "^0.33.0",
     "geist": "^1.3.0",
     "libphonenumber-js": "^1.11.17",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.469.0",
+    "matter-js": "^0.20.0",
     "motion": "^11.17.0",
     "next": "^15.0.1",
     "next-auth": "5.0.0-beta.25",
     "next-themes": "^0.4.4",
+    "poly-decomp": "^0.3.0",
     "postgres": "^3.4.4",
     "react": "^18.3.1",
     "react-country-flag": "^3.1.0",
@@ -62,6 +65,7 @@
     "server-only": "^0.0.1",
     "sonner": "^1.7.1",
     "superjson": "^2.2.1",
+    "svg-path-commander": "^2.1.7",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
@@ -70,6 +74,8 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/eslint": "^8.56.10",
+    "@types/lodash": "^4.17.14",
+    "@types/matter-js": "^0.19.8",
     "@types/node": "^20.14.10",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
