--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
-    "date-fns": "^4.1.0",
+    "date-fns": "^3.6.0",
     "dotted-map": "^2.2.3",
     "drizzle-orm": "^0.33.0",
     "geist": "^1.3.0",
@@ -58,6 +58,7 @@
     "postgres": "^3.4.4",
     "react": "^18.3.1",
     "react-country-flag": "^3.1.0",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
