--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "react-icons": "^5.4.0",
     "react-phone-number-input": "^3.4.10",
     "server-only": "^0.0.1",
+    "sharp": "^0.33.5",
     "sonner": "^1.7.1",
     "superjson": "^2.2.1",
     "svg-path-commander": "^2.1.7",
