--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "next": "^15.0.1",
     "next-auth": "5.0.0-beta.25",
     "next-themes": "^0.4.4",
+    "next-video": "^2.0.1",
     "poly-decomp": "^0.3.0",
     "postgres": "^3.4.4",
     "react": "^18.3.1",
