--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "date-fns": "^3.6.0",
     "dotted-map": "^2.2.3",
     "drizzle-orm": "^0.33.0",
+    "embla-carousel-react": "^8.5.2",
     "geist": "^1.3.0",
     "libphonenumber-js": "^1.11.17",
     "lodash": "^4.17.21",
