--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
     "react-phone-number-input": "^3.4.10",
+    "resend": "^4.1.1",
     "server-only": "^0.0.1",
     "sharp": "^0.33.5",
     "sonner": "^1.7.1",
