--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.6",
+    "@stripe/stripe-js": "^5.6.0",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@tanstack/react-query": "^5.50.0",
     "@trpc/client": "^11.0.0-rc.446",
@@ -55,6 +56,7 @@
     "drizzle-orm": "^0.33.0",
     "embla-carousel-react": "^8.5.2",
     "geist": "^1.3.0",
+    "javascript-time-ago": "^2.5.11",
     "libphonenumber-js": "^1.11.17",
     "lodash": "^4.17.21",
     "lucide-react": "^0.469.0",
@@ -74,10 +76,12 @@
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
     "react-phone-number-input": "^3.4.10",
+    "react-time-ago": "^7.3.3",
     "resend": "^4.1.1",
     "server-only": "^0.0.1",
     "sharp": "^0.33.5",
     "sonner": "^1.7.1",
+    "stripe": "^17.6.0",
     "superjson": "^2.2.1",
     "svg-path-commander": "^2.1.7",
     "tailwind-merge": "^2.6.0",
@@ -89,6 +93,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/eslint": "^8.56.10",
+    "@types/javascript-time-ago": "^2.0.8",
     "@types/lodash": "^4.17.14",
     "@types/matter-js": "^0.19.8",
     "@types/node": "^20.14.10",
